--- a/gdl2/TIMI_UA_NSTEMI.v1.test.yml
+++ b/gdl2/TIMI_UA_NSTEMI.v1.test.yml
@@ -1,73 +1,120 @@
-current_datetime: '2019-11-28T00:00:00+01:00'
 guidelines:
   1: TIMI_UA_NSTEMI.v1
 test_cases:
-- id: Above 65, all negative
+- id: 1. No selection (negative test)
+  input:
+    1: {}
+  expected_output:
+    1: {}
+- id: 2. Total score 0
   input:
     1:
-      gt0005|Birthdate: 1949-06-28T09:03Z
-      gt0008|≥ 3 CAD Risk Factors*: 0|local::at0010|No|
-      gt0010|Known CAD (Stenosis ≥ 50%): 0|local::at0012|No|
-      gt0012|ASA Use in Past 7 days: 0|local::at0014|No|
-      gt0015|Severe angina (≥ 2 episodes in 24 hrs): 0|local::at0016|No|
-      gt0016|EKG ST changes ≥ 0.5mm: 0|local::at0018|No|
-      gt0017|Positive Cardiac Marker: 0|local::at0020|No|
+      gt0060|Age: 0|local::at0024|< 65 years|
+      gt0061|CAD risk factors: 0|local::at0010|< 3 CAD risk factors|
+      gt0062|Known CAD: 0|local::at0012|Stenosis < 50%|
+      gt0063|ASA use in past 7 days: 0|local::at0014|No|
+      gt0064|Severe angina episodes: 0|local::at0016|< 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
   expected_output:
     1:
-      gt0004|Age: 70,a
-      gt0022|Total score: 1
-      gt0009|Age ≥ 65: 1|local::at0025|Yes|
-      gt0035|Risk grading: 0|local::at0003|5% risk at 14 days of all-cause mortality|
-
-
-- id: Below 65, all negative
+      gt0054|Total score: 0
+      gt0057|Interpretation: 5% risk at 14 days of all-cause mortality
+- id: 3. Total score 1
   input:
     1:
-      gt0005|Birthdate: 1969-06-28T09:03Z
-      gt0008|≥ 3 CAD Risk Factors*: 0|local::at0010|No|
-      gt0010|Known CAD (Stenosis ≥ 50%): 0|local::at0012|No|
-      gt0012|ASA Use in Past 7 days: 0|local::at0014|No|
-      gt0015|Severe angina (≥ 2 episodes in 24 hrs): 0|local::at0016|No|
-      gt0016|EKG ST changes ≥ 0.5mm: 0|local::at0018|No|
-      gt0017|Positive Cardiac Marker: 0|local::at0020|No|
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 0|local::at0010|< 3 CAD risk factors|
+      gt0062|Known CAD: 0|local::at0012|Stenosis < 50%|
+      gt0063|ASA use in past 7 days: 0|local::at0014|No|
+      gt0064|Severe angina episodes: 0|local::at0016|< 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
   expected_output:
     1:
-      gt0004|Age: 50,a
-      gt0022|Total score: 0
-      gt0009|Age ≥ 65: 0|local::at0024|No|
-      gt0035|Risk grading: 0|local::at0003|5% risk at 14 days of all-cause mortality|
-
-
-- id: Some positive
+      gt0054|Total score: 1
+      gt0057|Interpretation: 5% risk at 14 days of all-cause mortality
+- id: 4. Total score 2
   input:
     1:
-      gt0005|Birthdate: 1952-06-28T09:03Z
-      gt0008|≥ 3 CAD Risk Factors*: 1|local::at0011|Yes|
-      gt0010|Known CAD (Stenosis ≥ 50%): 1|local::at0013|Yes|
-      gt0012|ASA Use in Past 7 days: 0|local::at0014|No|
-      gt0015|Severe angina (≥ 2 episodes in 24 hrs): 1|local::at0017|Yes|
-      gt0016|EKG ST changes ≥ 0.5mm: 0|local::at0018|No|
-      gt0017|Positive Cardiac Marker: 0|local::at0020|No|
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 0|local::at0012|Stenosis < 50%|
+      gt0063|ASA use in past 7 days: 0|local::at0014|No|
+      gt0064|Severe angina episodes: 0|local::at0016|< 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
   expected_output:
     1:
-      gt0004|Age: 67,a
-      gt0022|Total score: 4
-      gt0009|Age ≥ 65: 1|local::at0025|Yes|
-      gt0035|Risk grading: 3|local::at0006|20% risk at 14 days of all-cause mortality|
-
-- id: All positive
+      gt0054|Total score: 2
+      gt0057|Interpretation: 8% risk at 14 days of all-cause mortality
+- id: 5. Total score 3
   input:
     1:
-      gt0005|Birthdate: 1952-06-28T09:03Z
-      gt0008|≥ 3 CAD Risk Factors*: 1|local::at0011|Yes|
-      gt0010|Known CAD (Stenosis ≥ 50%): 1|local::at0013|Yes|
-      gt0012|ASA Use in Past 7 days: 1|local::at0015|Yes|
-      gt0015|Severe angina (≥ 2 episodes in 24 hrs): 1|local::at0017|Yes|
-      gt0016|EKG ST changes ≥ 0.5mm: 1|local::at0019|Yes|
-      gt0017|Positive Cardiac Marker: 1|local::at0021|Yes|
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 1|local::at0013|Stenosis ≥ 50%|
+      gt0063|ASA use in past 7 days: 0|local::at0014|No|
+      gt0064|Severe angina episodes: 0|local::at0016|< 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
   expected_output:
     1:
-      gt0004|Age: 67,a
-      gt0022|Total score: 7
-      gt0009|Age ≥ 65: 1|local::at0025|Yes|
-      gt0035|Risk grading: 5|local::at0008|41% risk at 14 days of all-cause mortality|
+      gt0054|Total score: 3
+      gt0057|Interpretation: 13% risk at 14 days of all-cause mortality
+- id: 6. Total score 4
+  input:
+    1:
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 1|local::at0013|Stenosis ≥ 50%|
+      gt0063|ASA use in past 7 days: 1|local::at0015|Yes|
+      gt0064|Severe angina episodes: 0|local::at0016|< 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
+  expected_output:
+    1:
+      gt0054|Total score: 4
+      gt0057|Interpretation: 20% risk at 14 days of all-cause mortality
+- id: 7. Total score 5
+  input:
+    1:
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 1|local::at0013|Stenosis ≥ 50%|
+      gt0063|ASA use in past 7 days: 1|local::at0015|Yes|
+      gt0064|Severe angina episodes: 1|local::at0017|≥ 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 0|local::at0018|< 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
+  expected_output:
+    1:
+      gt0054|Total score: 5
+      gt0057|Interpretation: 26% risk at 14 days of all-cause mortality
+- id: 8. Total score 6
+  input:
+    1:
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 1|local::at0013|Stenosis ≥ 50%|
+      gt0063|ASA use in past 7 days: 1|local::at0015|Yes|
+      gt0064|Severe angina episodes: 1|local::at0017|≥ 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 1|local::at0019|≥ 0.5mm|
+      gt0066|Positive Cardiac Marker: 0|local::at0020|No|
+  expected_output:
+    1:
+      gt0054|Total score: 6
+      gt0057|Interpretation: 41% risk at 14 days of all-cause mortality
+- id: 9. Total score 7
+  input:
+    1:
+      gt0060|Age: 1|local::at0025|≥ 65 years|
+      gt0061|CAD risk factors: 1|local::at0011|≥ 3 CAD risk factors|
+      gt0062|Known CAD: 1|local::at0013|Stenosis ≥ 50%|
+      gt0063|ASA use in past 7 days: 1|local::at0015|Yes|
+      gt0064|Severe angina episodes: 1|local::at0017|≥ 2 episodes in 24 hrs|
+      gt0065|EKG ST changes: 1|local::at0019|≥ 0.5mm|
+      gt0066|Positive Cardiac Marker: 1|local::at0021|Yes|
+  expected_output:
+    1:
+      gt0054|Total score: 7
+      gt0057|Interpretation: 41% risk at 14 days of all-cause mortality
