Update metadata and guideline ruless

--- a/gdl2/Falls_Efficacy_Scale.v1.test.yml
+++ b/gdl2/Falls_Efficacy_Scale.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Falls Efficacy Scale.v1
+  1: Falls_Efficacy_Scale.v1
 test_cases:
 - id: test score 10
   input:
@@ -16,8 +16,8 @@ test_cases:
       gt0029|Getting on and off of the toilet: 1,1
   expected_output:
     1:
-      gt0014|Total Score: 10
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 10,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
 - id: test score 28
   input:
     1:
@@ -33,8 +33,8 @@ test_cases:
       gt0029|Getting on and off of the toilet: 1,1
   expected_output:
     1:
-      gt0014|Total Score: 28
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 28,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
 - id: test score 40
   input:
     1:
@@ -50,8 +50,8 @@ test_cases:
       gt0029|Getting on and off of the toilet: 1,1
   expected_output:
     1:
-      gt0014|Total Score: 40
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 40,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
 - id: test not execute
   input:
     1:
@@ -67,8 +67,8 @@ test_cases:
       gt0029|Getting on and off of the toilet: 1,1
   expected_output:
     1:
-      gt0014|Total Score: 41
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 41,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
 - id: test score 61
   input:
     1:
@@ -84,8 +84,8 @@ test_cases:
       gt0029|Getting on and off of the toilet: 9,1
   expected_output:
     1:
-      gt0014|Total Score: 61
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 61,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
 - id: test score 100
   input:
     1:
@@ -101,5 +101,5 @@ test_cases:
       gt0029|Getting on and off of the toilet: 10,1
   expected_output:
     1:
-      gt0014|Total Score: 100
-      gt0016|Score interpretation: local::at0016|FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.|
+      gt0014|Total Score: 100,1
+      gt0016|Score interpretation: FES results range from 0 to 100, where the higher the score, the lower the perceived self-efficacy at avoiding falls during non-hazardous, essential activities of daily living.
