Update metadata and a guideline rule

--- a/gdl2/Falls_Efficacy_Scale_International.v1.test.yml
+++ b/gdl2/Falls_Efficacy_Scale_International.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Falls Efficacy Scale International.v1
+  1: Falls_Efficacy_Scale_International.v1
 test_cases:
 - id: Test score 16
   input:
@@ -23,7 +23,7 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 16
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
 - id: Test Score 26
   input:
     1:
@@ -46,7 +46,7 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 26
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
 - id: Test Score 32
   input:
     1:
@@ -69,7 +69,7 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 32
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
 - id: Test Score 41
   input:
     1:
@@ -92,7 +92,7 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 41
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
 - id: Test Score 48
   input:
     1:
@@ -115,7 +115,7 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 48
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
 - id: Test score 64
   input:
     1:
@@ -138,4 +138,4 @@ test_cases:
   expected_output:
     1:
       gt0050|Total score: 64
-      gt0052|Score interpretation: local::at0016|FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).|
+      gt0052|Score interpretation: FES-I results range from 16 (no concern about falling) to 64 (severe concern about falling).
