Update archetype metadata

--- a/gdl2/Intracranial_hemorrhage_risk_from_thrombolytic_therapy.v1.test.yml
+++ b/gdl2/Intracranial_hemorrhage_risk_from_thrombolytic_therapy.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Intracranial_hemorrhage.v1
+  1: Intracranial_hemorrhage_risk_from_thrombolytic_therapy.v1
 test_cases:
 - id: Risk 0.69%
   input:
