--- a/gdl2/Reflux_Symptoms_Index_guideline.v1.test.yml
+++ b/gdl2/Reflux_Symptoms_Index_guideline.v1.test.yml
@@ -201,6 +201,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Total score: 9,1
+      gt0016|Interpretation: Normative data suggests that a RSI greater than or equal to 13 is clinically significant and may be indicative of significant reflux disease.
 - id: 16. score 18 all inputs are 2
   input:
     1:
