--- a/gdl2/SAPS-II_Score.v1.test.yml
+++ b/gdl2/SAPS-II_Score.v1.test.yml
@@ -1,284 +1,69 @@
 guidelines:
-  1: SAPS-II_Score.v1
+  1: SAPS-II_score.v1
 test_cases:
-  - id: case_1  Age<40yrs, SAPS II Score 18, In-hospital Mortality 2.9%
-    input:
-      1:
-        gt0003|Age, years: 35,a
-        gt0006|Systolic BP, mmHg: 100,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 0|local::at0015|70-119|
-        gt0009|Temperature, ºC or ºF: 41,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 129,mmol/l
-        gt0012|Potassium, mEq/L: 4.5,mEq/l
-        gt0013|Bicarbonate, mEq/L: 21,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 6,mg/dl
-        gt0022|White cell count, x 10³/mm³: 2,10*3/mm3
-        gt0024|Total urine output, ml/d: 1000,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L: 0|local::at0038|BUN <28 or urea <10|
-        gt0084|GCS: 0|local::at0027|14-15|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          0|local::at0033|Not\
-          \ on mechanical ventilation or CPAP within the last 24 hours. |
-        gt0086|Chronic disease: 0|local::at0068|None|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 3|local::at0025|Yes|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 18
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 0|local::at0042|≥1000 ml/day|
-        gt0037|Sodium Score: 0|local::at0052|125-144|
-        gt0039|Bicarbonate Score: 0|local::at0060|≥20 |
-        gt0035|Systolic BP Score: 0|local::at0021|100-199|
-        gt0040|Bilirubin Score: 9|local::at0081|≥6.0 mg/dL (≥102.6 µmol/L)|
-        gt0034|Age Score: 0|local::at0006|<40|
-        gt0051|In-hospital Mortality: 2.9,%
-
-  - id: case_2  Age 40-59, SAPS II Score 48, In-hospital mortality 41.5%
-    input:
-      1:
-        gt0003|Age, years: 46,a
-        gt0006|Systolic BP, mmHg: 90,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 4|local::at0016|120-159|
-        gt0009|Temperature, ºC or ºF: 41,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 135,mmol/l
-        gt0012|Potassium, mEq/L: 4,mEq/l
-        gt0013|Bicarbonate, mEq/L: 15,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.7,mg/dl
-        gt0022|White cell count, x 10³/mm³: 1,10*3/mm3
-        gt0024|Total urine output, ml/d: 1000,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L:
-          6|local::at0039|BUN 28-83 or urea\
-          \ 10-29.6|
-        gt0084|GCS: 0|local::at0027|14-15|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          0|local::at0033|Not\
-          \ on mechanical ventilation or CPAP within the last 24 hours. |
-        gt0086|Chronic disease: 10|local::at0070|Hematologic malignancy|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 3|local::at0025|Yes|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 48
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 0|local::at0042|≥1000 ml/day|
-        gt0037|Sodium Score: 0|local::at0052|125-144|
-        gt0039|Bicarbonate Score: 3|local::at0061|15-19 |
-        gt0035|Systolic BP Score: 5|local::at0020|70-99|
-        gt0040|Bilirubin Score: 4|local::at0080|4.0-5.9 mg/dL (68.4-102.5 µmol/L)|
-        gt0034|Age Score: 7|local::at0007|40-59|
-        gt0051|In-hospital Mortality: 41.5,%
-
-  - id: case_3  Age 60-69, SAPS II Score 60, In-hospital mortality 68.1%
-    input:
-      1:
-        gt0003|Age, years: 65,a
-        gt0006|Systolic BP, mmHg: 140,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 2|local::at0014|40-69|
-        gt0009|Temperature, ºC or ºF: 36,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 120,mmol/l
-        gt0012|Potassium, mEq/L: 3.8,mEq/l
-        gt0013|Bicarbonate, mEq/L: 15,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.7,mg/dl
-        gt0022|White cell count, x 10³/mm³: 1,10*3/mm3
-        gt0024|Total urine output, ml/d: 700,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L:
-          10|local::at0040|BUN ≥84 or urea ≥\
-          30|
-        gt0084|GCS: 5|local::at0028|11-13|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          0|local::at0033|Not\
-          \ on mechanical ventilation or CPAP within the last 24 hours. |
-        gt0086|Chronic disease: 9|local::at0069|Metastatic cancer|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 0|local::at0024|No|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 60
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 4|local::at0043|500-999 ml/day|
-        gt0037|Sodium Score: 5|local::at0054|<125|
-        gt0039|Bicarbonate Score: 3|local::at0061|15-19 |
-        gt0035|Systolic BP Score: 0|local::at0021|100-199|
-        gt0040|Bilirubin Score: 4|local::at0080|4.0-5.9 mg/dL (68.4-102.5 µmol/L)|
-        gt0034|Age Score: 12|local::at0008|60-69|
-        gt0051|In-hospital Mortality: 68.1,%
-
-  - id: case_4  Age 70-74, SAPS II Score 81, In-hospital mortality 93.1%
-    input:
-      1:
-        gt0003|Age, years: 74,a
-        gt0006|Systolic BP, mmHg: 60,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 4|local::at0016|120-159|
-        gt0009|Temperature, ºC or ºF: 36,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 120,mmol/l
-        gt0012|Potassium, mEq/L: 3.8,mEq/l
-        gt0013|Bicarbonate, mEq/L: 21,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.7,mg/dl
-        gt0022|White cell count, x 10³/mm³: 1,10*3/mm3
-        gt0024|Total urine output, ml/d: 700,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L:
-          10|local::at0040|BUN ≥84 or urea ≥\
-          30|
-        gt0084|GCS: 5|local::at0028|11-13|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          6|local::at0034|≥200\
-          \ mm Hg/% (26.6 kPa/%)|
-        gt0086|Chronic disease: 9|local::at0069|Metastatic cancer|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 0|local::at0024|No|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 81
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 4|local::at0043|500-999 ml/day|
-        gt0037|Sodium Score: 5|local::at0054|<125|
-        gt0039|Bicarbonate Score: 0|local::at0060|≥20 |
-        gt0035|Systolic BP Score: 13|local::at0019|<70|
-        gt0040|Bilirubin Score: 4|local::at0080|4.0-5.9 mg/dL (68.4-102.5 µmol/L)|
-        gt0034|Age Score: 15|local::at0009|70-74|
-        gt0051|In-hospital Mortality: 93.1,%
-
-  - id: case_5  Age 75-79, SAPS II Score 88, In-hospital mortality 96.1%
-    input:
-      1:
-        gt0003|Age, years: 79,a
-        gt0006|Systolic BP, mmHg: 60,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 11|local::at0013|<40|
-        gt0009|Temperature, ºC or ºF: 36,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 120,mmol/l
-        gt0012|Potassium, mEq/L: 3.8,mEq/l
-        gt0013|Bicarbonate, mEq/L: 21,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.7,mg/dl
-        gt0022|White cell count, x 10³/mm³: 1,10*3/mm3
-        gt0024|Total urine output, ml/d: 700,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L:
-          6|local::at0039|BUN 28-83 or urea\
-          \ 10-29.6|
-        gt0084|GCS: 7|local::at0029|9-10|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          6|local::at0034|≥200\
-          \ mm Hg/% (26.6 kPa/%)|
-        gt0086|Chronic disease: 10|local::at0070|Hematologic malignancy|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 0|local::at0024|No|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 88
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 4|local::at0043|500-999 ml/day|
-        gt0037|Sodium Score: 5|local::at0054|<125|
-        gt0039|Bicarbonate Score: 0|local::at0060|≥20 |
-        gt0035|Systolic BP Score: 13|local::at0019|<70|
-        gt0040|Bilirubin Score: 4|local::at0080|4.0-5.9 mg/dL (68.4-102.5 µmol/L)|
-        gt0034|Age Score: 16|local::at0010|75-79|
-        gt0051|In-hospital Mortality: 96.1,%
-
-  - id: case_6   Age >=80, SAPS II Score 95, In-hospital mortality 97.8%
-    input:
-      1:
-        gt0003|Age, years: 86,a
-        gt0006|Systolic BP, mmHg: 60,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 11|local::at0013|<40|
-        gt0009|Temperature, ºC or ºF: 36,Cel
-        gt0011|Sodium, mEq/L or mmol/L: 120,mmol/l
-        gt0012|Potassium, mEq/L: 3.8,mEq/l
-        gt0013|Bicarbonate, mEq/L: 21,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.7,mg/dl
-        gt0022|White cell count, x 10³/mm³: 2,10*3/mm3
-        gt0024|Total urine output, ml/d: 700,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L:
-          6|local::at0039|BUN 28-83 or urea\
-          \ 10-29.6|
-        gt0084|GCS: 13|local::at0030|6-8|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          6|local::at0034|≥200\
-          \ mm Hg/% (26.6 kPa/%)|
-        gt0086|Chronic disease: 9|local::at0069|Metastatic cancer|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 0|local::at0024|No|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 95
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 4|local::at0043|500-999 ml/day|
-        gt0037|Sodium Score: 5|local::at0054|<125|
-        gt0039|Bicarbonate Score: 0|local::at0060|≥20 |
-        gt0035|Systolic BP Score: 13|local::at0019|<70|
-        gt0040|Bilirubin Score: 4|local::at0080|4.0-5.9 mg/dL (68.4-102.5 µmol/L)|
-        gt0034|Age Score: 18|local::at0011|>=80|
-        gt0051|In-hospital Mortality: 97.8,%
-
-  - id: case_7  SAPS II Score 44, In-hospital mortality 32.6%
-    input:
-      1:
-        gt0003|Age, years: 60,a
-        gt0006|Systolic BP, mmHg: 160,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 2|local::at0014|40-69|
-        gt0009|Temperature, ºC or ºF: 102.4,[degF]
-        gt0011|Sodium, mEq/L or mmol/L: 120,mmol/l
-        gt0012|Potassium, mEq/L: 3.8,mEq/l
-        gt0013|Bicarbonate, mEq/L: 21,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 102.8,umol/l
-        gt0022|White cell count, x 10³/mm³: 2,10*3/mm3
-        gt0024|Total urine output, ml/d: 1000,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L: 0|local::at0038|BUN <28 or urea <10|
-        gt0084|GCS: 5|local::at0028|11-13|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          0|local::at0033|Not\
-          \ on mechanical ventilation or CPAP within the last 24 hours. |
-        gt0086|Chronic disease: 0|local::at0068|None|
-        gt0087|Type of admission: 8|local::at0075|Unscheduled surgical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 3|local::at0025|Yes|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 44
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 0|local::at0042|≥1000 ml/day|
-        gt0037|Sodium Score: 5|local::at0054|<125|
-        gt0039|Bicarbonate Score: 0|local::at0060|≥20 |
-        gt0035|Systolic BP Score: 0|local::at0021|100-199|
-        gt0040|Bilirubin Score: 9|local::at0081|≥6.0 mg/dL (≥102.6 µmol/L)|
-        gt0034|Age Score: 12|local::at0008|60-69|
-        gt0051|In-hospital Mortality: 32.6,%
-
-  - id: case_8  SAPS II Score 30, In-hospital mortality 10.6%
-    input:
-      1:
-        gt0003|Age, years: 49,a
-        gt0006|Systolic BP, mmHg: 140,mm[Hg]
-        gt0007|Heart Rate (If it varied from cardiac arrest (11 points) to extreme tachycardia (7 points), assign 11 points): 0|local::at0015|70-119|
-        gt0009|Temperature, ºC or ºF: 37,[degF]
-        gt0011|Sodium, mEq/L or mmol/L: 125,mmol/l
-        gt0012|Potassium, mEq/L: 4.5,mEq/l
-        gt0013|Bicarbonate, mEq/L: 17,mEq/l
-        gt0015|Total Bilirubin, mg/dl or µmol/L: 4.1,umol/l
-        gt0022|White cell count, x 10³/mm³: 3,10*3/mm3
-        gt0024|Total urine output, ml/d: 1000,ml/d
-        gt0083|BUN, mg/dL or serum urea, mmol/L: 0|local::at0038|BUN <28 or urea <10|
-        gt0084|GCS: 0|local::at0027|14-15|
-        gt0085|PaO₂/FiO₂, if on mechanical ventilation or CPAP:
-          0|local::at0033|Not\
-          \ on mechanical ventilation or CPAP within the last 24 hours. |
-        gt0086|Chronic disease: 10|local::at0070|Hematologic malignancy|
-        gt0087|Type of admission: 6|local::at0074|Medical|
-    expected_output:
-      1:
-        gt0036|Temperature Score: 0|local::at0024|No|
-        gt0038|Potassium Score: 0|local::at0056|3.0-4.9 mEq/L|
-        gt0049|SAPS II Score: 26
-        gt0041|WBC Score: 0|local::at0064|1.0-19.9 x 10³/mm³|
-        gt0042|Urine output Score: 0|local::at0042|≥1000 ml/day|
-        gt0037|Sodium Score: 0|local::at0052|125-144|
-        gt0039|Bicarbonate Score: 3|local::at0061|15-19 |
-        gt0035|Systolic BP Score: 0|local::at0021|100-199|
-        gt0040|Bilirubin Score: 0|local::at0079|<4.0 mg/dL (<68.4 µmol/L)|
-        gt0034|Age Score: 7|local::at0007|40-59|
-        gt0051|In-hospital Mortality: 7.2,%
+- id: 1. All variables set to 0 points
+  input:
+    1:
+      gt0003|Age, years: 0|local::at0006|Less than 40|
+      gt0004|Heart Rate, per min: 0|local::at0015|70 to 119|
+      gt0005|Systolic BP: 0|local::at0021|100 to 199|
+      gt0006|Temperature ≥39ºC (102.2ºF): 0|local::at0024|No|
+      gt0007|GCS: 0|local::at0027|14 to 15|
+      gt0008|PaO₂/FiO₂, if on mechanical ventilation or CPAP: 0|local::at0033|Not on mechanical ventilation or CPAP within the last 24 hours|
+      gt0009|BUN, mg/dL or serum urea, mmol/L: 0|local::at0038|BUN less than 28 or urea  less than 10|
+      gt0010|Urine output, mL/day: 0|local::at0042|Greater than or equal to 1000|
+      gt0011|Sodium, mEq/L or mmol/L: 0|local::at0052|125 to 144|
+      gt0012|Potassium, mEq/L: 0|local::at0056|3.0 to 4.9|
+      gt0013|Bicarbonate, mEq/L: 0|local::at0060|Greater than or equal to 20|
+      gt0014|WBC, x 10³/mm³: 0|local::at0064|1.0 to 19.9|
+      gt0015|Bilirubin: 0|local::at0079|Less than 4.0 mg/dL (<68.4 µmol/L)|
+      gt0016|Chronic disease: 0|local::at0068|None|
+      gt0017|Type of admission: 0|local::at0073|Scheduled surgical|
+  expected_output:
+    1:
+      gt0020|In-hospital mortality: 0.0,%
+      gt0019|SAPS-II score: 0
+- id: 2. SAPS-II score = 64, In-hospital mortality = 75.3%
+  input:
+    1:
+      gt0003|Age, years: 7|local::at0007|40 to 59|
+      gt0004|Heart Rate, per min: 2|local::at0014|40 to 69|
+      gt0005|Systolic BP: 2|local::at0022|Greater than or equal to 200|
+      gt0006|Temperature ≥39ºC (102.2ºF): 3|local::at0025|Yes|
+      gt0007|GCS: 5|local::at0028|11 to 13|
+      gt0008|PaO₂/FiO₂, if on mechanical ventilation or CPAP: 6|local::at0034|Greater than or equal to 200 mm Hg/% (26.6 kPa/%)|
+      gt0009|BUN, mg/dL or serum urea, mmol/L: 6|local::at0039|BUN 28 to 83 or urea 10 to 29.6|
+      gt0010|Urine output, mL/day: 4|local::at0043|500 to 999|
+      gt0011|Sodium, mEq/L or mmol/L: 1|local::at0053|Greater than or equal to 145|
+      gt0012|Potassium, mEq/L: 3|local::at0057|Less than 3.0|
+      gt0013|Bicarbonate, mEq/L: 3|local::at0061|15 to 19|
+      gt0014|WBC, x 10³/mm³: 3|local::at0065|Greater than or equal to 20.0|
+      gt0015|Bilirubin: 4|local::at0080|4.0 to 5.9 mg/dL (68.4-102.5 µmol/L)|
+      gt0016|Chronic disease: 9|local::at0069|Metastatic cancer|
+      gt0017|Type of admission: 6|local::at0074|Medical|
+  expected_output:
+    1:
+      gt0020|In-hospital mortality: 75.3,%
+      gt0019|SAPS-II score: 64
+- id: 3. All variables set to max points
+  input:
+    1:
+      gt0003|Age, years: 18|local::at0011|Greater than or equal to 80|
+      gt0004|Heart Rate, per min: 11|local::at0013|Less than 40|
+      gt0005|Systolic BP: 13|local::at0019|Less than 70|
+      gt0006|Temperature ≥39ºC (102.2ºF): 3|local::at0025|Yes|
+      gt0007|GCS: 26|local::at0031|Less than 6|
+      gt0008|PaO₂/FiO₂, if on mechanical ventilation or CPAP: 11|local::at0036|Less than 100 mm Hg/% (13.3 kPa/%)|
+      gt0009|BUN, mg/dL or serum urea, mmol/L: 10|local::at0040|BUN greater than or equal to 84 or urea greater than or equal to 30|
+      gt0010|Urine output, mL/day: 11|local::at0044|Less than 500|
+      gt0011|Sodium, mEq/L or mmol/L: 5|local::at0054|Less than 125|
+      gt0012|Potassium, mEq/L: 3|local::at0058|Greater than or equal to 5.0|
+      gt0013|Bicarbonate, mEq/L: 6|local::at0062|Less than 15|
+      gt0014|WBC, x 10³/mm³: 12|local::at0066|Less than 1.0|
+      gt0015|Bilirubin: 9|local::at0081|Greater than or equal to 6.0 mg/dL (≥102.6 µmol/L)|
+      gt0016|Chronic disease: 17|local::at0071|AIDS|
+      gt0017|Type of admission: 8|local::at0075|Unscheduled surgical|
+  expected_output:
+    1:
+      gt0020|In-hospital mortality: 100.0,%
+      gt0019|SAPS-II score: 163
