--- a/gdl2/Must_score_guideline.v0.test.yml
+++ b/gdl2/Must_score_guideline.v0.test.yml
@@ -1,19 +1,19 @@
 guidelines:
-  1: mustscore_guideline.v0
+  1: Must_score_guideline.v0
 test_cases:
-- id: TEST 12
+- id: TEST 1
   input:
     1:
-      gt0013|Birth Age (Years): 14
+      gt0021|Age: 5,a
       gt0005|Body Mass Index (kg/m2): 0|local::at0007|>20|
       gt0006|Unplanned weight loss in past 3-6 months: 0|local::at0010|<5%|
       gt0007|Acute ill patient: 0|local::at0013|No|
   expected_output:
     1: {}
-- id: TEST 13
+- id: TEST 2
   input:
     1:
-      gt0013|Birth Age (Years): 18
+      gt0021|Age: 18,a
       gt0005|Body Mass Index (kg/m2): 0|local::at0007|>20|
       gt0006|Unplanned weight loss in past 3-6 months: 0|local::at0010|<5%|
       gt0007|Acute ill patient: 0|local::at0013|No|
@@ -22,27 +22,27 @@ test_cases:
       gt0009|Must Total score: 0
       gt0011|Risk assessment: local::at0031|Low|
       gt0012|Risk Recommendation: Routine clinical care
-- id: TEST 14
+- id: TEST 3
   input:
     1:
-      gt0013|Birth Age (Years): 20
-      gt0005|Body Mass Index (kg/m2): 1|local::at0008|18.5-20|
-      gt0006|Unplanned weight loss in past 3-6 months: 0|local::at0010|<5%|
+      gt0021|Age: 40,a
+      gt0005|Body Mass Index (kg/m2): 0|local::at0007|>20|
+      gt0006|Unplanned weight loss in past 3-6 months: 1|local::at0011|5-10%|
       gt0007|Acute ill patient: 0|local::at0013|No|
   expected_output:
     1:
       gt0009|Must Total score: 1
       gt0011|Risk assessment: local::at0032|medium|
       gt0012|Risk Recommendation: Observe; document dietary intake and if adequate/little concern, continue screening; if inadequate, improve and increase overall intake according to local policy
-- id: TEST 15
+- id: TEST 4
   input:
     1:
-      gt0013|Birth Age (Years): 23
-      gt0005|Body Mass Index (kg/m2): 2|local::at0009|<18.5|
-      gt0006|Unplanned weight loss in past 3-6 months: 0|local::at0010|<5%|
-      gt0007|Acute ill patient: 0|local::at0013|No|
+      gt0021|Age: 25,a
+      gt0005|Body Mass Index (kg/m2): 1|local::at0008|18.5-20|
+      gt0006|Unplanned weight loss in past 3-6 months: 1|local::at0011|5-10%|
+      gt0007|Acute ill patient: 2|local::at0014|Yes|
   expected_output:
     1:
-      gt0009|Must Total score: 2
+      gt0009|Must Total score: 4
       gt0011|Risk assessment: local::at0033|High|
       gt0012|Risk Recommendation: Treat*; refer to dietitian, improve and increase overall intake, increase frequency of monitoring according to local policy
