--- a/gdl2/THRIVE_for_Stroke.v1.test.yml
+++ b/gdl2/THRIVE_for_Stroke.v1.test.yml
@@ -1,11 +1,11 @@
-current_datetime: '2019-11-28T00:00:00+01:00'
+current_datetime: 2019-11-28T00:00:00+01:00
 guidelines:
   1: THRIVE_for_Stroke.v1
 test_cases:
 - id: score 0
   input:
     1:
-      gt0003|Total score: 8
+      gt0003|NIH Stroke Scale: 8
       gt0005|Birthdate: 1969-05-27T16:09Z
       gt0009|History of hypertension: 0|local::at0017|No|
       gt0011|History of diabetes mellitus: 0|local::at0019|No|
@@ -14,14 +14,14 @@ test_cases:
     1:
       gt0007|Age: 50,a
       gt0013|Age score: 0|local::at0011|Score for ≤ 59|
-      gt0018|Total score: 0
+      gt0018|NIH Stroke Scale: 0
       gt0014|NIHSS score: 0|local::at0014|Score ≤ 10|
       gt0032|Percentage predicted mortality at 90 days: 0|local::at0006|0-2%|
       gt0031|Chance of a good neurological outcome: 0|local::at0004|79-88%|
 - id: hypertension
   input:
     1:
-      gt0003|Total score: 8
+      gt0003|NIH Stroke Scale: 8
       gt0005|Birthdate: 1969-05-27T16:09Z
       gt0009|History of hypertension: 1|local::at0018|Yes|
       gt0011|History of diabetes mellitus: 0|local::at0019|No|
@@ -32,11 +32,10 @@ test_cases:
       gt0013|Age score: 0|local::at0011|Score for ≤ 59|
       gt0018|Total score: 1
       gt0014|NIHSS score: 0|local::at0014|Score ≤ 10|
-
 - id: AF, DM, Age 60
   input:
     1:
-      gt0003|Total score: 8
+      gt0003|NIH Stroke Scale: 8
       gt0005|Birthdate: 1959-05-27T16:09Z
       gt0009|History of hypertension: 0|local::at0017|No|
       gt0011|History of diabetes mellitus: 1|local::at0020|Yes|
@@ -47,11 +46,10 @@ test_cases:
       gt0013|Age score: 1|local::at0012|Score for 60-79|
       gt0018|Total score: 3
       gt0014|NIHSS score: 0|local::at0014|Score ≤ 10|
-
 - id: nihss 11-20, age 80
   input:
     1:
-      gt0003|Total score: 11
+      gt0003|NIH Stroke Scale: 11
       gt0005|Birthdate: 1939-05-27T16:09Z
       gt0009|History of hypertension: 0|local::at0017|No|
       gt0011|History of diabetes mellitus: 1|local::at0020|Yes|
@@ -62,12 +60,10 @@ test_cases:
       gt0013|Age score: 2|local::at0013|Score for ≥ 80|
       gt0018|Total score: 6
       gt0014|NIHSS score: 2|local::at0015|Score 11-20|
-
-
 - id: nihss above 20
   input:
     1:
-      gt0003|Total score: 21
+      gt0003|NIH Stroke Scale: 21
       gt0005|Birthdate: 1939-05-27T16:09Z
       gt0009|History of hypertension: 0|local::at0017|No|
       gt0011|History of diabetes mellitus: 1|local::at0020|Yes|
